Fix spacing of 'f' in \mathrm
https://github.com/mathquill/mathquill/pull/416#issuecomment-107972893

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -66,8 +66,7 @@
   }
 
   .mq-roman var.mq-f {
-    display: inline;
-    position: static;
+    margin: 0;
   }
 
   big {
